<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="point1"><b>1-)You will see Start Recording and Stop Recording buttons.</b></string>
    <string name="point2"><b>2-)Then a Text is displayed. Read this text after pressing on \'Start Recording\' button</b></string>
    <string name="point3"><b>3-)When the reading is done press on \'Stop Recording\' button</b></string>
    <string name="point4"><b>4-)Repeat the above steps 2) and 3) until you see the \'Upload Profile\' Button</b></string>
    <string name="point5"><b>5-)So click on Upload Button\, then you will receive a message \'Saved Successfully\' </b></string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_main">Add Contact Demo</string>
    <string name="hnt_et_name">Display Name</string>
    <string name="hnt_et_mobile_phone">Mobile Phone</string>
    <string name="hnt_et_home_phone">Home Phone</string>
    <string name="hnt_et_home_email">Home Email</string>
    <string name="hnt_et_work_email">Work Email</string>
    <string name="str_btn_add">Download</string>
    <string name="str_btn_contacts">Upload</string>
    <string name="photo_attendance">Photo Attendance</string>
    <string name="voice_attenadance">Voice Attendance</string>
    <string name="external_dir">GetSignature</string>
    <string name="barcode">Barcode/QRcode</string>
    <string name="signature">Signature</string>
    <string name="visitingcard">Visiting Card</string>
    <string name="calendarEvents">Upload Calendar Events</string>
    <string name="downloadcalendarEvents">Download Calendar Events</string>
    <string name="bincleaning">Before/After Cleaning Photo</string>
    <string name="photoreport">Photo Work Report</string>
    <string name="videoreport">Video Work Report</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="Submit">Fetch Data From Srever</string>
    <string name="synccalendar">Fetch Data From Srever</string>
    <string name="DownloadResumeFeature">Download</string>
    <string name="item_download_btn_start">Start</string>
    <string name="password_txt">Thank you for installing MobiMDM. We are happy to inform you that phone is secured by MobiMDM. If you wish to uninstall MobiMDM please visit the MobiMDM application</string>
    <string name="google">Google</string>
    <string name="browser_settings">Browser Settings</string>
    <string name="location">Allow sites to access your location</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User Agent</string>
    <string name="history">Clear history on exit</string>
    <string name="email">Email me</string>
    <string name="flash">Enable Adobe Flash (if it\'s installed)</string>
    <string name="mobile">View as Mobile</string>
    <string name="desk">View as Desktop</string>
    <string name="custom">View as custom user agent</string>
    <string name="settingshelp">Settings only apply to new tabs</string>
    <string name="fullscreen">Enable fullscreen mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="profile_spinner">Profiel A</string>
    <string name="userlist_spinner">User List</string>
    <string name="detete_user">Delete User</string>
    <string name="update_user">Update</string>
    <string name="all_permission">Enable All permission MobiMDM</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">        You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">        Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">        Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="accessibility_service_description">If allowed, The service will take user data and send it to http://mobiocean.com according settings done by admin.</string>
    <string name="accessibility_service_name">MobiMDM</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_defaultSenderId">854479189925</string>
    <string name="title_activity_lock">Lock</string>
    <string name="saveTab">Save Tab</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Profile</item>
        <item>Data Backup</item>
        <item>Security</item>
    </string-array>
    <string name="customername">Customer Name :</string>
    <string name="modeoftravel">Mode Of Travel :</string>
    <string name="start">START</string>
    <string name="remarks">Remarks/Expenses :</string>
    <string name="choose">Choose File</string>
    <string name="update">Update</string>
    <string name="visitend">Visit End</string>
    <string name="amount">Amount :</string>
    <string name="add">Add</string>
    <string name="transallowance">Transport Allowance :</string>
    <string name="ordersheet">Order Sheet</string>
    <string name="claimedAmount">Amount :</string>
    <string name="date">Date</string>
    <string name="orderhistory">Order History</string>
    <string name="secondaryorder">Secondary Order</string>
    <string name="clientcode">Client Code :</string>
    <string name="usercode">User Code :</string>
    <string name="mobileno">Mobile No :</string>
    <string name="enterotp">Enter OTP</string>
    <string name="app_name">MobiMDM</string>
    <string name="version_no">I am getting smarter</string>
    <string name="image_view">Image View</string>
    <string name="client_code">Client Code</string>
    <string name="employee_code">Employee Code</string>
    <string name="phone_no">Phone Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="release_header">November 2016 Release</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number. Enter the OTP below in case if we fail to detect the SMS automatically</string>
    <string name="settings">Settings</string>
    <string name="bug_report">Bug Report</string>
    <string name="about">About</string>
    <string name="uninstall">Uninstall</string>
    <string name="check_update">Check Update</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <string name="browser">Browser</string>
    <string name="contact">Contact</string>
    <string name="calendar">Calendar</string>
    <string name="sos">SOS</string>
    <string name="attendance">Attendance</string>
    <string name="conveyance">Conveyance</string>
    <string name="travel_allowance">Travel Allowance</string>
    <string name="copy_right_text">&#169;2016 <u>Gingerbox Mobility</u> </string>
    <string name="home">Home</string>
    <string name="tell_us_more">Tell Us More</string>
    <string name="attach_screenshots">Attach Screenshots (Optional)</string>
    <string name="employee_id">Employee Id</string>
    <string name="email_id">Email Id</string>
    <string name="name">Name</string>
    <string name="done">DONE</string>
    <string name="title_activity_video_view">VideoViewActivity</string>
</resources>