<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tool"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/customername"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignEnd="@+id/ll1"
                    android:layout_alignLeft="@+id/ll1"
                    android:layout_alignRight="@+id/ll1"
                    android:layout_alignStart="@+id/ll1"
                    android:layout_below="@+id/ll1"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg_transparent"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nameTxt"
                    android:layout_marginTop="10dp"
                    android:text="@string/remarks"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/remarkEtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/ll1"
                    android:layout_alignLeft="@+id/txt2"
                    android:layout_alignRight="@+id/ll1"
                    android:layout_alignStart="@+id/txt2"
                    android:layout_below="@+id/txt2"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg_transparent"
                    android:padding="10dp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ll1"
                    android:layout_alignStart="@+id/ll1"
                    android:layout_below="@+id/remarkEtxt"
                    android:layout_marginTop="10dp"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/uploadfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/ll1"
                    android:layout_alignLeft="@+id/txt2"
                    android:layout_alignRight="@+id/ll1"
                    android:layout_alignStart="@+id/txt2"
                    android:layout_below="@+id/txt3"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg_transparent"
                    android:drawableRight="@mipmap/ic_action_upload"
                    android:editable="false"
                    android:focusable="false"
                    android:padding="10dp"
                    android:text="@string/choose"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/uploadfile"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="90dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/update_btn"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/button_bg_transparent"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/visitend_btn"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/button_bg_transparent"
                        android:text="@string/visitend"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
