<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/tool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tool"
                android:padding="20dp">

                <Spinner
                    android:id="@+id/customarname_spinner"
                    style="@style/spinner_style"
                    android:layout_below="@+id/txt1" />

                <Spinner
                    android:id="@+id/modeoftravel_spinner"
                    style="@style/spinner_style"
                    android:layout_below="@+id/txt2" />

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/customarname_spinner"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/customarname_spinner"
                    android:layout_marginTop="10dp"
                    android:text="@string/customername"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/customarname_spinner"
                    android:layout_alignStart="@+id/customarname_spinner"
                    android:layout_below="@+id/customarname_spinner"
                    android:layout_marginTop="20dp"
                    android:text="@string/modeoftravel"
                    android:textColor="@color/white"
                    android:textSize="20dp" />


            </RelativeLayout>

            <Button
                android:id="@+id/startbtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_bg_transparent"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
